Add login and registration views; implement layout structure and custom CSS classes

--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -1043,3 +1043,11 @@ span.select2-selection.select2-selection--single {
 .p-8px {
     padding: 8px !important;
 }
+
+.mt-50px {
+    margin-top: 50px !important;
+}
+
+.mt-100px {
+    margin-top: 100px !important;
+}
